# bevy_fishing_horror_jam

./: .gitignore  Cargo.toml  Makefile  README.md  about.toml  license.html
.cargo/: config.toml  settings.local.json
.github/workflows/: release.yaml
assets/: asset_manifest.json
assets/balance/: items.json
assets/shaders/: background.wgsl  charge_arrow.wgsl  loading_bar.wgsl  mpeg_artifact.wgsl  pixelation.wgsl  pole.wgsl  qte_dial.wgsl  random_color_fish.wgsl
crates/ai_core/: Cargo.toml
crates/ai_core/src/: background_image.rs  burn_plugin.rs  camera.rs  lib.rs
crates/anim_ui/: Cargo.toml
crates/anim_ui/examples/: anim_during.rs  despawn_on_exit.rs
crates/anim_ui/src/: despawn.rs  despawn_on.rs  during.rs  lib.rs  spawn_on.rs
crates/camera_effects/: Cargo.toml
crates/camera_effects/examples/: fade_example.rs  shake_example.rs
crates/camera_effects/src/: fade.rs  lib.rs  shake.rs
crates/dev_debug_panel/: Cargo.toml
crates/dev_debug_panel/src/: lib.rs
crates/kira_ext/: Cargo.toml
crates/kira_ext/examples/: play_bgm.rs  play_sfx.rs
crates/kira_ext/src/: audio_engine.rs  bgm.rs  lib.rs  sfx.rs
crates/yolo/: Cargo.toml  build.rs
crates/yolo/examples/: demo.rs
crates/yolo/src/: config.rs  lib.rs
crates/yolo/src/game_manager/: canvas.rs  detection.rs  mod.rs
crates/yolo/src/game_manager/player/: mod.rs
crates/yolo/src/model/: mod.rs
make/: itch.mk  web.mk
messages/en-us/: items.json
messages/zh-tw/: items.json
src/: asset_loading.rs  asset_tracking.rs  dbg.rs  loading_bar.rs  main.rs  prelude.rs  version.rs
src/dev_tools/: bevy_inspector_egui.rs  mod.rs  pick.rs  validate_preloading.rs
src/dev_tools/change_detection/: mod.rs
src/dev_tools/debug_panel/: hand_screen.rs  mod.rs  monster_threat.rs
src/dev_tools/inspect/: resource_sys.rs  sys_filter.rs  sys_filter_template
src/game_manager/: bgm.rs  mod.rs  sprite_layer.rs
src/game_manager/actor/: actor.rs  mesh.rs  mod.rs
src/game_manager/background/: bubble.rs  mod.rs
src/game_manager/backpack/: catch_anim.rs  container.rs  hand_pointer.rs  hide_ui.rs  last_item.rs  loading_bar.rs  mock_caught_fish.rs  mod.rs  shake.rs  spawn.rs
src/game_manager/backpack/items/: debug_buttons.rs  mod.rs  random_color_material.rs
src/game_manager/baits/: mod.rs
src/game_manager/balance/: items_json.rs  mod.rs
src/game_manager/dead/: mod.rs
src/game_manager/end/: mod.rs
src/game_manager/goal/: mod.rs
src/game_manager/interactions/: mod.rs  spawn_cup.rs
src/game_manager/lake/: mod.rs  spawn_lake_points.rs
src/game_manager/monster/: attack_animation.rs  bubble.rs  charge_arrow.rs  check_escape.rs  human_shadow.rs  mod.rs  monster_attack.rs  monster_shadow.rs  shadow.rs  spawn.rs  zone.rs
src/game_manager/player/: hand_drawing.rs  hand_screen.rs  head.rs  mod.rs
src/game_manager/player/health/: heart_ui.rs  mod.rs  mpeg_artifact.rs  spawn.rs
src/game_manager/player/mock/: hand.rs  head.rs  mod.rs
src/game_manager/pole/: hide.rs  mod.rs  spawn_pole.rs
src/game_manager/pole/biting/: bend.rs  detect.rs  mod.rs  monster_threat.rs  move_bobber.rs  pull_up.rs  qte.rs
src/game_manager/pole/casting/: bobber.rs  fish_line.rs  forward.rs  mod.rs
src/game_manager/pole/idle/: detect.rs  idle_to_backward.rs  left_right.rs  mock_detect.rs  mod.rs
src/game_manager/pole/waiting/: hooked_fish.rs  mod.rs
src/game_manager/post_hook/: mod.rs
src/game_manager/scan_items/: mod.rs  ui.rs
src/game_manager/tutorials/: mod.rs  open_button.rs  ui.rs
src/game_manager/ui/: description_panel.rs  mod.rs
src/menus/: mod.rs
src/model/: mod.rs
src/screens/: gameplay.rs  mod.rs  splash.rs  start_game_ui.rs  title.rs
src/screens/loading/: mod.rs  preload_assets.rs  spawn_level.rs
src/theme/: font.rs  interaction.rs  mod.rs  palette.rs  typography.rs  widget.rs
tools/asset_scanner/: Cargo.toml
tools/asset_scanner/src/: main.rs
tools/balance_downloader/: Cargo.toml  main.rs
