[package]
name = "anim_ui"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["default_app"] }
bevy_tweening = { workspace = true }

[dev-dependencies]
bevy = { workspace = true, features = [
    "2d",
    "bevy_text",
    "bevy_ui",
    "png",
    "2d_bevy_render",
    "default_app",
    "default_platform",
    "ui_api",
    "ui_bevy_render",
] }

[[example]]
name = "despawn_on_exit"

[[example]]
name = "anim_during"
