[package]
name = "kira_ext"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true, features = ["default_app"] }
bevy_kira_audio = { workspace = true, optional = true }
rand = { version = "0.10", optional = true }

[dev-dependencies]
bevy = { workspace = true, features = [
    "2d",
    "bevy_text",
    "bevy_ui",
    "bevy_gizmos",
    "pan_camera",
    "webgpu",
    "png",
    "jpeg",
    "2d_bevy_render",
    "default_app",
    "default_platform",
    "ui_api",
    "ui_bevy_render",
    "scene",
] }
bevy_kira_audio = { workspace = true }

[[example]]
name = "play_bgm"
required-features = ["backend"]

[[example]]
name = "play_sfx"
required-features = ["backend"]

[features]
default = []
backend = ["dep:bevy_kira_audio", "dep:rand"]
